Auto-Masking Limit and Falloff not a brush setting #115174

Closed
opened 2023-11-20 12:28:29 +01:00 by Julien Kaspar · 3 comments
Member

System Information
Operating system: Linux-6.6.1-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 16.0.6, DRM 3.54, 6.6.1-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-rc4

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-19 23:36, hash: 41f9f2753a70
Worked: (newest version of Blender that worked as expected)

Short description of error
Similar issue as #115173.

The Limit and Falloff settings for View and Area Normal auto-masking are only availible as Scene settings.
The values shown in the brush settings should be brush settings.
These settings need to be added and exposed instead in the brush settings.

Brush.tool_settings.sculpt.automasking_view_normal_limit
Brush.tool_settings.sculpt.automasking_view_normal_limit
Brush.tool_settings.sculpt.automasking_start_normal_limit
Brush.tool_settings.sculpt.automasking_start_normal_limit

This issue is present since the feature was added.

Exact steps for others to reproduce the error

  • Enter sculpt mode
  • Enabled View and Area Normal auto-masking in the brush settings
  • Adjust the values in Limit and Falloff on each field
  • Switch to a different brush enable the same auto-masking options again (Notice how the values stayed the same)
**System Information** Operating system: Linux-6.6.1-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 16.0.6, DRM 3.54, 6.6.1-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-rc4 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-19 23:36, hash: `41f9f2753a70` Worked: (newest version of Blender that worked as expected) **Short description of error** Similar issue as #115173. The Limit and Falloff settings for View and Area Normal auto-masking are only availible as Scene settings. The values shown in the brush settings should be brush settings. These settings need to be added and exposed instead in the brush settings. `Brush.tool_settings.sculpt.automasking_view_normal_limit` `Brush.tool_settings.sculpt.automasking_view_normal_limit` `Brush.tool_settings.sculpt.automasking_start_normal_limit` `Brush.tool_settings.sculpt.automasking_start_normal_limit` This issue is present since the feature was added. **Exact steps for others to reproduce the error** - Enter sculpt mode - Enabled View and Area Normal auto-masking in the brush settings - Adjust the values in Limit and Falloff on each field - Switch to a different brush enable the same auto-masking options again (Notice how the values stayed the same)
Iliya Katushenock added
Interest
Sculpt, Paint & Texture
and removed
Module
Sculpt, Paint & Texture
labels 2023-11-20 13:14:18 +01:00

I can confirm this.

In fact, it would be more ideal if the Limit and Falloff settings for View and Area Normal auto-masking were available for individual brush settings, rather than only as Scene settings.

This is because having them only as Scene settings can cause inconvenience when switching between brushes during sculpting.

image

I can confirm this. In fact, it would be more ideal if the Limit and Falloff settings for View and Area Normal auto-masking were available for individual brush settings, rather than only as Scene settings. This is because having them only as Scene settings can cause inconvenience when switching between brushes during sculpting. ![image](/attachments/ccf755d9-e448-45db-9ee4-119c2c9edf5c)
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-12-12 14:51:35 +01:00
Member

Picking this task up, should have a PR later this week

Picking this task up, should have a PR later this week
Author
Member

Fixed with 1e4f133950

Fixed with 1e4f133950
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2024-01-29 17:03:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115174
No description provided.