Sculpt: Add brush settings for view & normal automasking values

Adds data for brush level values and ensures that brush values are
preferred over tool-level values.

Ref \#115174