source/blender/makesdna/DNA_brush_defaults.h
@@ -92,7 +92,13 @@
     .pose_smooth_iterations = 4, \
     .pose_ik_segments = 1, \
     .hardness = 0.0f, \
+ \
+    /* automasking */ \
     .automasking_boundary_edges_propagation_steps = 1, \
+    .automasking_start_normal_limit = 0.34906585f, /* 20 / 180 * pi. */ \
+    .automasking_start_normal_falloff = 0.25f, \
+    .automasking_view_normal_limit = 1.570796, /* 0.5 * pi. */ \
+    .automasking_view_normal_falloff = 0.25f, \
     .automasking_cavity_blur_steps = 0,\
     .automasking_cavity_factor = 1.0f,\
  \
